# Meta-Co-Training

./: MCT_experiment.py  README.md  mct.py  process_iNat.py  requirements.yaml  utils.py
DAHS/: DAHB.py  torch_utils.py
data_processing/: make_10percent.py  make_samples_list.py
examples/: 10percent_idx.pkl  1percent_idx.pkl  MCT_FPFT_pretrain.py  MCT_FPFT_test.py  MCT_e2e.py  MCT_e2e_multiview.py  MCT_e2e_unc.py  MCT_e2e_unc_bicache.py  MCT_prep.py  mct_e2e.sh  mct_e2e_multiview.sh  mct_e2e_unc.sh  mct_e2e_unc_bicache.sh  mct_fpft.sh  mct_prep.sh  mct_pretrain.sh
meta-cotraining/: LICENSE  pyproject.toml
meta-cotraining/src/mct/: MCT.py  dahps.py  image_models.py  models.py  utils.py
meta-cotraining/src/mct.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
