[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "mct"
version = "0.0.1"
authors = [
  { name="Jay Rothenberger", email="jay.c.rothenberger@gmail.com" },
]
description = "The official implementation of the Meta Co-Training algorithm - https://arxiv.org/abs/2311.18083"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "huggingface_hub==0.23.3",
  "numpy==1.26.4",
  "pandas==2.2.2",
  "pickleshare==0.7.5",
  "pillow==10.3.0",
  "torch==2.1.2",
  "timm>=1.0.3",
  "torchvision>=0.16.1",
  "tqdm==4.66.4",
  "docker-pycreds==0.4.0",
  "gitdb==4.0.11",
  "gitpython==3.1.43",
  "protobuf==5.27.1",
  "sentry-sdk==2.5.1",
  "setproctitle==1.3.3",
  "smmap==5.0.1",
  "wandb==0.17.1",
            ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Topic :: Scientific/Engineering :: Machine Learning",
]

[project.urls]
Homepage = "https://github.com/JayRothenberger/Meta-Co-Training"
Issues = "https://github.com/JayRothenberger/Meta-Co-Training/issues"